<resources>
    <string name="app_name">garita_test</string>
    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>
    <!--Actividad Registro-->
    <string name="CrearCuantaTXT">Crear una Cuenta</string>
    <string name="NombreEt">Nombre</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>

    <!--Actividad Login-->
    <string name="IniciarSesionTXT">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">Notienes una cuenta?. Registrate</string>

    <!--Menu Principal-->
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="NombrePrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="CerrarSesion">Salir</string>
    <string name="UidPrincipal"> -- </string>
    <string name="AgregarObjetos">Agregar</string>
    <string name="ListarObjetos">Mis Objetos</string>
    <string name="Archivados">Archivados</string>
    <string name="Perfil">Perfil</string>
    <string name="Filtrar_Notas">Filtrar notas</string>
    <string name="ModoUser">Modo usuario</string>
    <string name="AcercaDe">Acerca de</string>

    <!--Agregar Objeto-->
    <string name="Uid_Usuario">Uid del usuario</string>
    <string name="Correo_usuario">Correo de usuario</string>
    <string name="Fecha_hora_actual_TXT">Fecha de registro</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">Perdido</string>

    <!--Menu-->
    <string name="Agregar_Objeto_BD">Agregar</string>
    <string name="Actualizar_Objeto_BD">Actualizar</string>
    <string name="User">User</string>
    <string name="Vaciar_objetos">Eliminar todos los objetos</string>


    <!--Item Objeto-->
    <string name="Id_objeto_Item">Id objeto</string>
    <string name="Uid_Usuario_Item">Uid del usuario</string>
    <string name="Correo_usuario_Item">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora actual</string>
    <string name="Titulo_Item">Titulo</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Btn_Calendario_Item">Calendario</string>
    <string name="Fecha_Item">00/00/0000</string>
    <string name="Estado_Item">Perdido</string>

    <!--CUADRO DE DIALOGO OPCIONES-->
    <string name="ElijaOpcionTXT">Elija una opción</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <!--CUADRO DE DIÁLOGO - ELEGIR IMAGEN DE-->
    <string name="ElegirImagenTXT">Elegir imagen de:</string>
    <string name="Btn_Elegir_Galeria">Galería</string>
    <string name="Btn_Elegir_Camara">Cámara</string>

    <!--CUADRO DE DIÁLOGO - FILTRAR NOTAS-->
    <string name="FiltroTXT">Filtrar objetos: </string>
    <string name="Todas_notas">Todos</string>
    <string name="Objetos_Encontrado">Encontrado</string>
    <string name="Objetos_Perdido">Perdido</string>

    <!--ACTUALIZAR  OBJETO-->
    <string name="Id_Objeto_A">Id nota</string>
    <string name="Uid_Usuario_A"> Uid del usuario</string>
    <string name="Correo_usuario_A">Correo de usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A"> Título </string>
    <string name="Descripcion_A"> Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A"> 00/00/0000 </string>
    <string name="Estado_A"> Perdido</string>
    <string name="Estado_nuevo"> -- </string>

    <!---SPINNER - ESTADO-->
    <string-array name="Estados_objeto">
        <item>"Perdido"</item>
        <item>"Encontrado"</item>
    </string-array>

    <!--Detalle Objeto-->
    <string name="DetalleObjetoTXT">Detalle del Objeto</string>
    <string name="Id_objeto_Detalle_TXT">Id del objeto: </string>
    <string name="Id_objeto_Detalle">Id objeto</string>
    <string name="Uid_usuario_Detalle_TXT">Uid de usuario: </string>
    <string name="Uid_usuario_Detalle">Uid usuario</string>
    <string name="Correo_usuario_Detalle_TXT">Correo de usuario: </string>
    <string name="Correo_usuario_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle_TXT">Título: </string>
    <string name="Titulo_Detalle">Título</string>
    <string name="Descripcion_Detalle_TXT">Descripción: </string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Fecha_registro_Detalle_TXT">Fecha de registro: </string>
    <string name="Fecha_Registro_Detalle">Fecha registro</string>
    <string name="Fecha_Objeto_Detalle_TXT">Fecha Objeto: </string>
    <string name="Fecha_Objeto_Detalle">Fecha nota</string>
    <string name="Estado_Detalle_TXT">Estado del Objeto: </string>
    <string name="Estado_Detalle">Estado</string>


</resources>