<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarObjeto.Agregar_Objeto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--UID DEL USUARIO-->

        <TextView
            android:id="@+id/Uid_Usuario"
            android:hint="@string/Uid_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
        <!--UID DEL CORREO DEL USUARIO-->
        <TextView
            android:id="@+id/Correo_usuario"
            android:hint="@string/Correo_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/Fecha_hora_actual"
            android:hint="@string/Fecha_hora_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/Titulo"
            android:hint="@string/Titulo"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/Descripcion"
            android:hint="@string/Descripcion"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <!--Abrir calendario-->
            <Button
                android:id="@+id/Btn_Calendario"
                android:text="@string/Btn_Calendario"
                app:icon="@drawable/icono_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!--VISUALIZAR FECHA ELEGIDA-->
            <TextView
                android:id="@+id/Fecha"
                android:hint="@string/Fecha"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!--Estado de la nota-->
            <TextView
                android:id="@+id/Estado"
                android:text="@string/Estado"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Spinner
                android:id="@+id/Spinner_estado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/Estado_nuevo"
                android:text="@string/Estado_nuevo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>




</ScrollView>