<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/paimonsearch"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/FiltroTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Todas_notas"
        android:text="@string/Todas_notas"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Objetos_Encontrado"
        android:text="@string/Objetos_Encontrado"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Objetos_Perdido"
        android:text="@string/Objetos_Perdido"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>