<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <!--Imagen de contacto-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Imagen_c_Item"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/paimon_lost"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="7dp">

            <!--Id_nota_Item-->
            <TextView
                android:id="@+id/Id_objeto_Item"
                android:text="@string/Id_objeto_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Uid_Usuario_Item-->
            <TextView
                android:id="@+id/Uid_Usuario_Item"
                android:text="@string/Uid_Usuario_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Correo_usuario_Item-->
            <TextView
                android:id="@+id/Correo_usuario_Item"
                android:text="@string/Correo_usuario_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Fecha_hora_registro_Item-->
            <TextView
                android:id="@+id/Fecha_hora_registro_Item"
                android:text="@string/Fecha_hora_registro_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Titulo_Item-->
            <TextView
                android:id="@+id/Titulo_Item"
                android:text="@string/Titulo_Item"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Descripcion_Item-->
            <TextView
                android:id="@+id/Descripcion_Item"
                android:text="@string/Descripcion_Item"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <!--Fecha_Item-->
            <TextView
                android:id="@+id/Fecha_Item"
                android:text="@string/Fecha_Item"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--ESTADO DE LA NOTA-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Objeto_Encontrado_Item"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginStart="5dp"
                    android:background="#16A085"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Objeto_No_Encontrado_Item"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginStart="5dp"
                    android:background="#E74C3C"/>


                <!--Estado_Item-->
                <TextView
                    android:id="@+id/Estado_Item"
                    android:text="@string/Estado_Item"
                    android:textSize="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>





    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>