<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaUsuario.Detalle_Usuario">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <!--Imagen portada y del objeto-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:scaleType="centerCrop"
                android:src="@drawable/razorja" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Imagen_OU_D"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/paimon_lost" />
        </RelativeLayout>

        <!--Titulo del objeto-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/DetalleObjetoTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--ICONO - TXT - ID NOTA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/paimonsearch"/>

            <!--TXT-->
            <TextView
                android:visibility="gone"
                android:text="@string/Id_objeto_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATO - ID NOTA-->
        <TextView
            android:visibility="gone"
            android:id="@+id/Id_objeto_Detalle"
            android:text="@string/Id_objeto_Detalle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--ICONO - TXT - UID USUARIO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/paimon_item"/>

            <!--TXT-->
            <TextView

                android:text="@string/Uid_usuario_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATO - UID USUARIO-->
        <TextView
            android:visibility="gone"
            android:id="@+id/Uid_usuario_Detalle"
            android:text="@string/Uid_usuario_Detalle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--ICONO - TXT - CORREO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/correo_usuario_detalle"/>

            <!--TXT-->
            <TextView
                android:text="@string/Correo_usuario_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATO - CORREO-->
        <TextView
            android:id="@+id/Correo_usuario_Detalle"
            android:text="@string/Correo_usuario_Detalle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--ICONO - TXT - TITULO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/titulo_objeto_detalle"/>

            <!--TXT-->
            <TextView
                android:text="@string/Titulo_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATO - TITULO-->
        <TextView
            android:id="@+id/Titulo_Detalle"
            android:text="@string/Titulo_Detalle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--ICONO - TXT - DESCRIPCIÓN-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/descripcion_objeto_detalle"/>

            <!--TXT-->
            <TextView
                android:text="@string/Descripcion_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATO - DESCRIPCIÓN-->
        <TextView
            android:id="@+id/Descripcion_Detalle"
            android:text="@string/Descripcion_Detalle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <!--ICONO - TXT - FECHA REGISTRO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/fecha_registro_objeto_detalle"/>

            <!--TXT-->
            <TextView
                android:text="@string/Fecha_registro_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATO - FECHA REGISTRO-->
        <TextView
            android:id="@+id/Fecha_Registro_Detalle"
            android:text="@string/Fecha_Registro_Detalle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--ICONO - TXT - FECHA OBJETO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/fecha_objeto_detalle"/>

            <!--TXT-->
            <TextView
                android:text="@string/Fecha_Objeto_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATO - FECHA OBJETO-->
        <TextView
            android:id="@+id/Fecha_Objeto_Detalle"
            android:text="@string/Fecha_Objeto_Detalle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--ICONO - TXT-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/estado_detalle"/>

            <!--TXT-->
            <TextView
                android:text="@string/Estado_Detalle_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--DATO-->
        <TextView
            android:id="@+id/Estado_Detalle"
            android:text="@string/Estado_Detalle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>